2011-02-17  Lars Ingebrigtsen  <larsi@gnus.org>

	* auth-source.el (auth-source-search): Do a two-phase search, one with
	no :create to get the responses from all backends.

	* nnimap.el (nnimap-open-connection-1): Delete duplicate server names
	when getting credentials.

	* gnus-util.el (gnus-delete-duplicates): New function.

2011-02-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnimap.el (nnimap-credentials): Instead of picking the first port as
	a creation default, pass the whole port list down.  It will be
	completed.

	* auth-source.el (auth-source-search): Updated docs to talk about
	multiple creation choices.
	(auth-source-netrc-create): Accept a list as a value (from the search
	parameters) and do completion on that list.  Keep a separate netrc line
	with the password obscured for showing the user.

	* nnimap.el (nnimap-open-connection-1): Make the `nnimap-address' the
	first choice to `auth-source-search' so it will be used for entry
	creation instead of the server's Gnus-specific name.
	(nnimap-credentials): Rely on the auth-source library to select which
	port is actually wanted in the new netrc entry, so don't override
	`auth-source-creation-defaults'.

	* auth-source.el (auth-source-netrc-parse): Use :port instead of
	:protocol and accept a missing user, host, or port as a wildcard match.
	(auth-source-debug): Default to off.

	(auth-source-netrc-search, auth-source-netrc-create)
	(auth-source-secrets-search, auth-source-secrets-create)
	(auth-source-user-or-password, auth-source-backend, auth-sources)
	(auth-source-backend-parse-parameters, auth-source-search): Use :port
	instead of :protocol.

	* nnimap.el (nnimap-credentials): Pass a port default to
	`auth-source-search' in case an entry needs to be created.
	(nnimap-open-connection-1): Use :port instead of :protocol.

2011-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-secrets-search): Use mm-delete-duplicates
	instead of delete-dups that is not available in XEmacs 21.4.
