@@ -1,3 +1,11 @@
+2011-02-18  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* nnimap.el (nnimap-log-command): Add a newline to the inhibited
+	logging.
+	(nnimap-credentials): Protect against auth-source-search returning nil.
+	(nnimap-request-list): Protect against not being able to open the
+	server.
+
 2011-02-17  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* auth-source.el (auth-source-search): Do a two-phase search, one with
